--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-nav-bar></app-nav-bar>
+
 <div class="container main-container">
 
   <h1> Demos <small>Angular</small>  </h1>
@@ -10,5 +12,5 @@
 
   <router-outlet></router-outlet>
   <hr>
-  
+
 </div>
